--- a/index.html
+++ b/index.html
@@ -37,21 +37,7 @@
     <div class="layout">
       <div id="map-area" class="card">
         <div id="svg-wrapper">
-          <!-- Example placeholder SVG -->
-          <svg id="example-map" xmlns="http://www.w3.org/2000/svg" width="800" height="520" viewBox="0 0 800 520">
-            <g id="districts">
-              <path id="d-1" data-district="d-1" d="M100,80 L220,80 L220,200 L100,200 Z" fill="#ddd" stroke="transparent" stroke-width="1"></path>
-              <path id="d-2" data-district="d-2" d="M230,80 L350,80 L350,200 L230,200 Z" fill="#ddd" stroke="transparent" stroke-width="1"></path>
-              <path id="d-3" data-district="d-3" d="M100,220 L220,220 L220,340 L100,340 Z" fill="#ddd" stroke="transparent" stroke-width="1"></path>
-              <path id="d-4" data-district="d-4" d="M230,220 L350,220 L350,340 L230,340 Z" fill="#ddd" stroke="transparent" stroke-width="1"></path>
-            </g>
-            <g fill="#222" font-size="12">
-              <text x="160" y="140" text-anchor="middle">District 1</text>
-              <text x="290" y="140" text-anchor="middle">District 2</text>
-              <text x="160" y="280" text-anchor="middle">District 3</text>
-              <text x="290" y="280" text-anchor="middle">District 4</text>
-            </g>
-          </svg>
+          <!-- map.svg will be injected here by script.js -->
         </div>
       </div>
 
@@ -73,3 +59,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
