--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <div class="wrap">
+    <header>
+      <h1>2025 Election Map</h1>
+    </header>
     <!-- Popular Vote + Seats -->
     <section class="top-widgets" style="margin-top:14px">
       <div id="popular-vote" class="card" style="padding:12px">
@@ -51,5 +54,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
