--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <div class="wrap">
     <header>
       <h1>2025 Election Map</h1>
+      <div class="controls">
+        <input id="svg-file" type="file" accept="image/svg+xml" />
+        <button class="btn" id="reset-map">Reset Map</button>
+      </div>
     </header>
     <!-- Popular Vote + Seats -->
     <section class="top-widgets" style="margin-top:14px">
@@ -54,6 +58,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
