--- a/index.html
+++ b/index.html
@@ -14,37 +14,39 @@
 
     <!-- Popular Vote + Seat Row (same width) -->
     <section class="top-widgets" style="margin-top:14px">
-      <div class="pv-wrap card pv-card">
+      <div id="popular-vote" class="card pv-card">
         <div class="pv-header">
-          <div class="pv-title">Popular vote</div>
+          <strong>Popular Vote</strong>
           <div class="pv-meta">
-            <span id="pv-total" class="muted">0 votes</span>
+            <small id="pv-total" class="muted">0 votes</small>
             <span class="dot-sep">•</span>
-            <span id="last-updated" class="muted">Last updated: —</span>
+            <small id="last-updated" class="muted">Last updated: —</small>
           </div>
         </div>
 
-        <div class="pv-bar-wrap">
-          <div class="pv-50">
-            <div class="pv-50-line"></div>
-            <div class="pv-50-caret">▼</div>
-          </div>
-          <div id="pv-bar" class="pv-bar"></div>
-        </div>
-      </div>
+        <!-- Popular vote stack (fixed width container) -->
+        <div class="pv-wrap">
+          <!-- 50% marker above the bar ONLY -->
+          <div class="pv-50vline" aria-hidden="true"></div>
+          <div class="pv-50caret" aria-hidden="true">▼</div>
+          <div class="pv-50label-top">50%</div>
 
-      <div class="seats-wrap card">
-        <div class="seats-header">
-          <div class="seats-title">Seats (15)</div>
-          <div class="seats-legend">
-            <span class="seat-key ndp">NDP</span>
-            <span class="seat-key ulp">ULP</span>
+          <div class="pv-bar" id="pv-bar">
+            <!-- segments injected by JS -->
           </div>
         </div>
-        <div id="seats-row" class="seats-row" aria-label="Seat chart"></div>
+
+        <!-- Seat count row (same width as pv-bar) -->
+        <div class="seats-wrap">
+          <div id="seats-row" class="seats-row" aria-label="Seat count">
+            <!-- 15 squares injected by JS -->
+          </div>
+          <div id="seat-summary" class="muted seat-summary">0 / 15 decided</div>
+        </div>
       </div>
     </section>
 
+    <!-- Map + Right column -->
     <div class="layout">
       <div id="map-area" class="card">
         <div id="svg-wrapper">
@@ -76,6 +78,7 @@
           </div>
         </div>
 
+        
         <!-- Party summary table -->
         <div class="card party-table-card">
           <table class="party-table" id="party-table" aria-label="Party summary">
