--- a/index.html
+++ b/index.html
@@ -24,26 +24,30 @@
           </div>
         </div>
 
-        <!-- Popular vote stack (fixed width container) -->
-        <div class="pv-wrap">
-          <!-- 50% marker above the bar ONLY -->
-          <div class="pv-50vline" aria-hidden="true"></div>
-          <div class="pv-50caret" aria-hidden="true">▼</div>
-          <div class="pv-50label-top">50%</div>
+       <!-- Popular vote row: NDP label | bar | ULP label -->
+<div class="pv-row">
+  <div class="pv-side pv-left">
+    <img class="pv-logo" src="NDP logo.png" alt="NDP">
+    <span class="pv-tag">NDP</span>
+  </div>
 
-          <div class="pv-bar" id="pv-bar">
-            <!-- segments injected by JS -->
-          </div>
-        </div>
+  <div class="pv-wrap">
+    <!-- 50% marker above the bar ONLY -->
+    <div class="pv-50vline" aria-hidden="true"></div>
+    <div class="pv-50caret" aria-hidden="true">▼</div>
+    <div class="pv-50label-top">50%</div>
 
-        <!-- Seat count row (same width as pv-bar) -->
-        <div class="seats-wrap">
-          <div id="seats-row" class="seats-row" aria-label="Seat count">
-            <!-- 15 squares injected by JS -->
-          </div>
-          <div id="seat-summary" class="muted seat-summary">0 / 15 decided</div>
-        </div>
-      </div>
+    <div class="pv-bar" id="pv-bar">
+      <!-- segments injected by JS -->
+    </div>
+  </div>
+
+  <div class="pv-side pv-right">
+    <span class="pv-tag">ULP</span>
+    <img class="pv-logo" src="ULP logo.png" alt="ULP">
+  </div>
+</div>
+
     </section>
 
     <!-- Map + Right column -->
@@ -100,3 +104,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
