--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
     <img class="pv-logo" src="NDP logo.png" alt="NDP">
     <span class="pv-tag">NDP</span>
   </div>
+<!-- Seat count row (same width as pv-bar) -->
+<div class="seats-wrap">
+  <div id="seats-row" class="seats-row" aria-label="Seat count">
+    <!-- 15 squares injected by JS -->
+  </div>
+  <div id="seat-summary" class="muted seat-summary">0 / 15 decided</div>
+</div>
 
   <div class="pv-wrap">
     <!-- 50% marker above the bar ONLY -->
@@ -104,4 +111,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
