--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Interactive Election Map</title>
+  <title>2025 Election Map</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -12,7 +12,7 @@
       <h1>2025 Election Map</h1>
     </header>
 
-    <!-- Popular Vote + Seat Row (same width) -->
+    <!-- Popular Vote + Seats (stack) with side labels centered to combined height -->
     <section class="top-widgets" style="margin-top:14px">
       <div id="popular-vote" class="card pv-card">
         <div class="pv-header">
@@ -24,37 +24,37 @@
           </div>
         </div>
 
-       <!-- Popular vote row: NDP label | bar | ULP label -->
-<div class="pv-row">
-  <div class="pv-side pv-left">
-    <img class="pv-logo" src="NDP logo.png" alt="NDP">
-    <span class="pv-tag">NDP</span>
-  </div>
-<!-- Seat count row (same width as pv-bar) -->
-<div class="seats-wrap">
-  <div id="seats-row" class="seats-row" aria-label="Seat count">
-    <!-- 15 squares injected by JS -->
-  </div>
-  <div id="seat-summary" class="muted seat-summary">0 / 15 decided</div>
-</div>
+        <!-- Row: NDP label | (PV + Seats) | ULP label -->
+        <div class="pv-row">
+          <div class="pv-side pv-left">
+            <img class="pv-logo" src="NDP logo.png" alt="NDP" />
+            <span class="pv-tag">NDP</span>
+          </div>
 
-  <div class="pv-wrap">
-    <!-- 50% marker above the bar ONLY -->
-    <div class="pv-50vline" aria-hidden="true"></div>
-    <div class="pv-50caret" aria-hidden="true">▼</div>
-    <div class="pv-50label-top">50%</div>
+          <!-- Stack: PV bar (top) + Seats (bottom) -->
+          <div class="pv-stack">
+            <div class="pv-wrap">
+              <!-- 50% marker above the bar -->
+              <div class="pv-50vline" aria-hidden="true"></div>
+              <div class="pv-50caret" aria-hidden="true">▼</div>
+              <div class="pv-50label-top">50%</div>
 
-    <div class="pv-bar" id="pv-bar">
-      <!-- segments injected by JS -->
-    </div>
-  </div>
+              <div class="pv-bar" id="pv-bar"><!-- segments injected by JS --></div>
+            </div>
 
-  <div class="pv-side pv-right">
-    <span class="pv-tag">ULP</span>
-    <img class="pv-logo" src="ULP logo.png" alt="ULP">
-  </div>
-</div>
+            <!-- Seat count row (same width as pv-bar) -->
+            <div class="seats-wrap">
+              <div id="seats-row" class="seats-row" aria-label="Seat count"><!-- squares injected by JS --></div>
+              <div id="seat-summary" class="muted seat-summary">0 / 15 decided</div>
+            </div>
+          </div>
 
+          <div class="pv-side pv-right">
+            <span class="pv-tag">ULP</span>
+            <img class="pv-logo" src="ULP logo.png" alt="ULP" />
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- Map + Right column -->
@@ -69,7 +69,7 @@
         <div class="card">
           <label>Legend</label>
 
-          <!-- Legend grid: Party name | Declared | Leading -->
+          <!-- Simple legend (colors are in CSS) -->
           <div class="legend-matrix">
             <div class="lm-blank"></div>
             <div class="lm-head lm-declared">Declared</div>
@@ -89,7 +89,6 @@
           </div>
         </div>
 
-        <!-- Swing infobox -->
         <div class="card swing-info">
           <div class="swing-title">About Swing</div>
           <div class="swing-text">
@@ -111,5 +110,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
