--- a/index.html
+++ b/index.html
@@ -90,11 +90,12 @@
         </div>
 
         <div class="card swing-info">
-          <div class="swing-title">About Swing</div>
+          <div class="swing-title">About swing</div>
           <div class="swing-text">
             <strong>Swing</strong> shows how vote share has changed compared with the
-            <em>same polling divisions</em> that have reported so far (vs 2020). As more divisions report,
-            the swing recalculates using only those areas.
+            <em>same polling divisions</em> that have reported so far (vs 2020). For example: If polling divisions A, C, and E of South Leeward have reported, the national and seat swing are calculated based on those divisions only.
+            As more divisions report,
+            the swing recalculates using only those divisions reporting.
           </div>
         </div>
       </aside>
@@ -110,3 +111,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
